--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/black_bg"
+        android:orientation="vertical"
         tools:context=".MainActivity">
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_marginTop="95dp"
+            android:layout_marginStart="200dp"
+            android:layout_height="wrap_content">
+
+        <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/adopting"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:background="@drawable/oval_style"
+                android:layout_gravity="center"/>
+
+        <TextView
+                android:id="@+id/textViewAdopting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/adopting"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:fontFamily="@font/font"
+                android:textColor="#000000"
+                android:layout_centerInParent="true" />
+
+    </RelativeLayout>
+
+
+    <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animationViewTiger"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            app:lottie_rawRes="@raw/tiger"
+            app:lottie_autoPlay="true"
+            android:layout_marginStart="280dp"
+            android:layout_marginTop="50dp"
+            app:lottie_loop="true"/>
+
+
+    <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animationViewDog"
+            android:layout_width="wrap_content"
+            android:layout_height="300dp"
+            app:lottie_rawRes="@raw/dog"
+            app:lottie_autoPlay="true"
+            android:layout_marginTop="370dp"
+            android:layout_marginEnd="280dp"
+            app:lottie_loop="true"/>
+
+    <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_marginStart="220dp"
+            android:layout_height="wrap_content">
+
+        <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/ownership"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:layout_marginStart="80dp"
+                android:background="@drawable/oval_style"
+                android:layout_gravity="center"/>
+
+        <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/ownership"
+                android:textStyle="bold"
+                android:textSize="18sp"
+                android:paddingStart="70dp"
+                android:fontFamily="@font/font"
+                android:textColor="#000000"
+                android:layout_centerInParent="true" />
+
+    </RelativeLayout>
+
+
+
+
+</LinearLayout>
