--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -70,4 +70,8 @@
         <item name="android:fontFamily">@font/font</item>
     </style>
 
+    <style name="OvalButtonStyle" parent="@android:style/Widget.Button">
+        <item name="android:background">@drawable/oval_style</item>
+    </style>
+
 </resources>
