--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -54,11 +54,11 @@
                     style="@style/parent"
                     android:layout_marginTop="@dimen/loginViewsMargin">
                 <EditText
-                        android:id="@+id/usernameLogin"
+                        android:id="@+id/emailLogin"
                         style="@style/modifiedEditText"
                         android:inputType="textEmailAddress"
                         android:maxLines="1"
-                        android:hint="@string/username_hint"/>
+                        android:hint="@string/login_email_hint"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -73,13 +73,13 @@
                         android:inputType="textPassword"/>
             </com.google.android.material.textfield.TextInputLayout>
 
-            <TextView
-                    style="@style/viewParent"
-                    android:text="Forgot Password?"
-                    android:textColor="@color/roseColor"
-                    android:textSize="@dimen/newsMoreTextSize"
-                    android:layout_gravity="end"
-                    android:layout_marginTop="10dp"/>
+<!--            <TextView-->
+<!--                    style="@style/viewParent"-->
+<!--                    android:text="Forgot Password?"-->
+<!--                    android:textColor="@color/roseColor"-->
+<!--                    android:textSize="@dimen/newsMoreTextSize"-->
+<!--                    android:layout_gravity="end"-->
+<!--                    android:layout_marginTop="10dp"/>-->
 
             <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
                     android:id="@+id/cirLoginButton"
