--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,35 +10,6 @@
         tools:context=".MainActivity">
 
 
-    <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_marginTop="95dp"
-            android:layout_marginStart="200dp"
-            android:layout_height="wrap_content">
-
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/adopting"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:background="@drawable/oval_style"
-                android:layout_gravity="center"/>
-
-        <TextView
-                android:id="@+id/textViewAdopting"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/adopting"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:fontFamily="@font/font"
-                android:textColor="#000000"
-                android:layout_centerInParent="true" />
-
-    </RelativeLayout>
-
-
     <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/animationViewTiger"
             android:layout_width="wrap_content"
@@ -46,8 +17,65 @@
             app:lottie_rawRes="@raw/tiger"
             app:lottie_autoPlay="true"
             android:layout_marginStart="280dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="190dp"
             app:lottie_loop="true"/>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_marginTop="95dp"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/adopting"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:background="@drawable/oval_style"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:id="@+id/textViewAdopting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:fontFamily="@font/font"
+            android:text="@string/adopting"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </RelativeLayout>
+
+
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="200dp"
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ownership"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:background="@drawable/oval_style"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ownership"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:fontFamily="@font/font"
+            android:textColor="#000000"
+            android:layout_centerInParent="true" />
+
+    </RelativeLayout>
 
 
     <com.airbnb.lottie.LottieAnimationView
@@ -56,40 +84,7 @@
             android:layout_height="300dp"
             app:lottie_rawRes="@raw/dog"
             app:lottie_autoPlay="true"
-            android:layout_marginTop="370dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="280dp"
             app:lottie_loop="true"/>
-
-    <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_marginStart="220dp"
-            android:layout_height="wrap_content">
-
-        <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/ownership"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                android:layout_marginStart="80dp"
-                android:background="@drawable/oval_style"
-                android:layout_gravity="center"/>
-
-        <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/ownership"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:paddingStart="70dp"
-                android:fontFamily="@font/font"
-                android:textColor="#000000"
-                android:layout_centerInParent="true" />
-
-    </RelativeLayout>
-
-
-
-
 </LinearLayout>
