--- a/app/src/main/res/layout/activity_list_pet.xml
+++ b/app/src/main/res/layout/activity_list_pet.xml
@@ -1,86 +1,16 @@
-<ScrollView
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         xmlns:tools="http://schemas.android.com/tools"
-        android:background="@drawable/black_bg"
-        tools:context=".ListPetActivity">
+        android:background="@drawable/paint_bg"
+        tools:context=".pet.ListPetActivity"
+        android:orientation="vertical">
 
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
+        <ListView
+                android:id="@+id/listView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp">
+                android:layout_height="wrap_content" />
 
-            <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/roseColor">
-
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/font"
-                        android:textSize="40sp"
-                        android:textStyle="bold"
-                        android:textColor="@color/black"
-                        android:text="Obj" />
-
-            </FrameLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp">
-
-            <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/roseColor">
-
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/font"
-                        android:textSize="40sp"
-                        android:textStyle="bold"
-                        android:textColor="@color/black"
-                        android:text="Obj" />
-
-            </FrameLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp">
-
-            <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@color/roseColor">
-
-                <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/font"
-                        android:textSize="40sp"
-                        android:textStyle="bold"
-                        android:textColor="@color/black"
-                        android:text="Obj" />
-
-            </FrameLayout>
-
-        </androidx.cardview.widget.CardView>
-
-        <!-- Diğer CardView öğeleri buraya eklenebilir -->
-
-    </LinearLayout>
-</ScrollView>
+</RelativeLayout>
