--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -9,14 +9,16 @@
               tools:context=".otp.OtpActivity">
     <TextView
             android:id="@+id/otpTitle"
+            android:fontFamily="@font/font"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:textColor="@color/black"
             android:layout_marginTop="400dp"
-            android:textSize="40dp"
+            android:textSize="32sp"
             android:textStyle="bold"
-            android:paddingBottom="10dp"
-            android:text="OTP Auth" />
+            android:paddingBottom="40dp"
+            android:text="Enter the Verification Code Incoming to Your Email !" />
 
     <com.chaos.view.PinView
             android:id="@+id/otpInput"
@@ -25,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:cursorVisible="true"
+            android:fontFamily="@font/font"
             android:hint="OTP."
             android:inputType="text"
             android:itemBackground="@color/white"
@@ -43,23 +46,26 @@
             app:lineWidth="2dp"
             app:viewType="rectangle" />
 
-    <Button
+    <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
             android:id="@+id/otpButton"
-            android:layout_width="200dp"
-            android:layout_height="150dp"
-            android:layout_gravity="center"
-            android:layout_marginTop="24dp"
-            android:background="@color/black"
-            android:text="AUTH"
-            android:textColor="#000000"
-            android:padding="12dp"/>
+            style="@style/loginButton"
+            app:spinning_bar_width="4dp"
+            app:spinning_bar_color="#FFF"
+            android:text="VERIFY"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/loginViewsMargin"
+            app:spinning_bar_padding="6dp"
+            app:initialCornerAngle="27dp"/>
 
     <TextView
             android:id="@+id/resendOtp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="20dp"
-            android:paddingTop="10dp"
-            android:text="Resend OTP Code" />
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:paddingTop="40dp"
+            android:fontFamily="@font/font"
+            android:text="Resend Verfiy Code" />
 </LinearLayout>
