--- a/app/src/main/res/layout/activity_list_pet.xml
+++ b/app/src/main/res/layout/activity_list_pet.xml
@@ -13,4 +13,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+        <Button
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="1180dp"
+                android:layout_marginStart="700dp"
+                android:background="@drawable/undo"
+                android:id="@+id/mainButton"/>
+
 </RelativeLayout>
