--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -1,54 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal" android:layout_width="match_parent"
+              android:orientation="horizontal"
+              android:layout_width="match_parent"
               android:layout_height="wrap_content">
 
     <ImageView
             android:layout_width="75dp"
             android:layout_height="75dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginStart="30dp"
             android:src="@drawable/add_image"
             android:id="@+id/img1"/>
 
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
             android:orientation="vertical">
 
         <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Header"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
-                android:textColor="@color/colorAccent"
-                android:textSize="30dp"
+                android:textStyle="bold"
+                android:fontFamily="@font/font"
+                android:textColor="@color/black"
+                android:textSize="35sp"
                 android:id="@+id/nameText"/>
 
-        <TextView
-                android:layout_width="match_parent"
+        <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Description"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="25dp"
-                android:gravity="center"
-                android:id="@+id/breedText"/>
+                android:layout_marginTop="15dp"
+                android:orientation="vertical">
 
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Header"
-                android:gravity="center"
-                android:textColor="@color/colorAccent"
-                android:textSize="30dp"
-                android:id="@+id/speciesText"/>
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:orientation="horizontal">
 
-        <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Description"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="25dp"
-                android:gravity="center"
-                android:id="@+id/ageText"/>
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Breed: "
+                        android:textStyle="bold"
+                        android:fontFamily="@font/font"
+                        android:textColor="@color/black"
+                        android:textSize="30sp"
+                        android:gravity="center"/>
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Description"
+                        android:textStyle="bold"
+                        android:fontFamily="@font/font"
+                        android:textColor="@color/black"
+                        android:textSize="30sp"
+                        android:gravity="center"
+                        android:id="@+id/breedText"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Species: "
+                        android:textStyle="bold"
+                        android:fontFamily="@font/font"
+                        android:textColor="@color/black"
+                        android:textSize="30sp"
+                        android:gravity="center"/>
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Header"
+                        android:gravity="center"
+                        android:textStyle="bold"
+                        android:fontFamily="@font/font"
+                        android:textColor="@color/black"
+                        android:textSize="30sp"
+                        android:id="@+id/speciesText"/>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="40dp"
+                    android:orientation="horizontal">
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Age: "
+                        android:textStyle="bold"
+                        android:fontFamily="@font/font"
+                        android:textColor="@color/black"
+                        android:textSize="30sp"
+                        android:gravity="center"/>
+
+                <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Description"
+                        android:textStyle="bold"
+                        android:fontFamily="@font/font"
+                        android:textColor="@color/black"
+                        android:textSize="30sp"
+                        android:gravity="center"
+                        android:id="@+id/ageText"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
