--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="colorAccent">#11CFC5</color>
     <color name="themeColor">#11CFC5</color>
     <color name="roseColor">#EF1669</color>
+    <color name="lightPinkColor">#FADADD</color>
 
     <!--normal colors-->
     <color name="darkTextColor">#020000</color>
