--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -12,13 +12,6 @@
         android:layout_gravity="center">
 
 
-    <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_centerInParent="true"
-            android:paddingTop="20dp">
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -94,23 +87,31 @@
                     android:layout_marginTop="@dimen/loginViewsMargin"
                     android:onClick="onLoginClick"/>
 
+            <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                <ImageView
+                        android:layout_alignParentRight="true"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:src="@drawable/undo"
+                        android:layout_marginTop="40dp"
+                        android:scaleX="-1"
+                        android:layout_marginBottom="30dp"
+                        android:onClick="onLoginClick"/>
+
+                <View
+                        android:layout_marginTop="20dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_width="1dp"
+                        android:layout_height="500dp"/>
+
+            </RelativeLayout>
+
 
         </LinearLayout>
-    </ScrollView>
-    <View
-            android:layout_marginTop="20dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_width="11dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/ic_side_bg"/>
-    <ImageView
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_add_img"
-            android:layout_marginRight="11dp"
-            android:layout_marginBottom="30dp"
-            android:onClick="onLoginClick"/>
-</RelativeLayout>
+
+
+</ScrollView>
