--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,4 +87,12 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="280dp"
             app:lottie_loop="true"/>
+
+    <Button
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/undo"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="720dp"
+            android:id="@+id/goLoginButton"/>
 </LinearLayout>
