--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -11,7 +11,7 @@
         android:gravity="center"
         android:layout_gravity="center">
 
-    <ScrollView
+    <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true">
@@ -43,12 +43,6 @@
                         app:lottie_autoPlay="true"
                         app:lottie_loop="true"/>
             </LinearLayout>
-            <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    app:cardBackgroundColor="@color/whiteTextColor"
-                    app:cardCornerRadius="10dp">
 
                 <LinearLayout
                         android:layout_width="match_parent"
@@ -102,40 +96,40 @@
                                 android:inputType="textPassword"/>
                     </com.google.android.material.textfield.TextInputLayout>
 
-                    <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
-                            android:id="@+id/cirRegisterButton"
-                            style="@style/loginButton"
-                            app:spinning_bar_width="4dp"
-                            app:spinning_bar_color="#FFF"
-                            android:text="Register"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="@dimen/loginViewsMargin"
-                            app:initialCornerAngle="27dp"
-                            app:spinning_bar_padding="6dp"/>
-
-
                 </LinearLayout>
-            </androidx.cardview.widget.CardView>
+
+            <com.github.leandroborgesferreira.loadingbutton.customViews.CircularProgressButton
+                    android:id="@+id/cirRegisterButton"
+                    style="@style/loginButton"
+                    app:spinning_bar_width="4dp"
+                    app:spinning_bar_color="#FFF"
+                    android:text="Register"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="@dimen/loginViewsMargin"
+                    app:initialCornerAngle="27dp"
+                    app:spinning_bar_padding="6dp"/>
+
+            <ImageView
+                    android:layout_marginTop="20dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/undo"
+                    android:layout_marginRight="11dp"
+                    android:layout_marginBottom="30dp"
+                    android:onClick="onLoginClick"
+                    android:adjustViewBounds="false"/>
+
+            <View
+                    android:layout_marginTop="20dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_width="11dp"
+                    android:layout_height="500dp"
+                    android:background="@color/white"/>
+
+            </LinearLayout>
+        </RelativeLayout>
 
 
-
-        </LinearLayout>
-    </ScrollView>
-    <View
-            android:layout_marginTop="20dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_width="11dp"
-            android:layout_height="match_parent"
-            android:background="@drawable/ic_side_bg"/>
-    <ImageView
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_back_img"
-            android:layout_marginRight="11dp"
-            android:layout_marginBottom="30dp"
-            android:onClick="onLoginClick"
-            android:adjustViewBounds="false"/>
-</RelativeLayout>
+</ScrollView>
