--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,6 +31,16 @@
                         app:lottie_loop="true"/>
 
                 <TextView
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/font"
+                    android:textStyle="bold"
+                    android:textSize="30sp"
+                    style="@style/viewParent.headerText.NoMode"
+                    android:text="Welcome! "/>
+
+                <TextView
                         android:layout_centerVertical="true"
                         android:layout_alignParentLeft="true"
                         android:layout_gravity="center"
@@ -38,7 +48,7 @@
                         android:textStyle="bold"
                         android:textSize="30sp"
                         style="@style/viewParent.headerText.NoMode"
-                        android:text="Already have an Account ?"/>
+                        android:text="Already have an Account? "/>
 
             </LinearLayout>
 
@@ -82,8 +92,8 @@
                     android:textAlignment="center"
                     android:textStyle="bold"
                     android:textColor="@color/roseColor"
-                    android:textSize="17sp"
-                    android:text="New user? Register Now"
+                    android:textSize="22sp"
+                    android:text="New user? Register Now! "
                     android:layout_marginTop="@dimen/loginViewsMargin"
                     android:onClick="onLoginClick"/>
 
